# agents

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Makefile  PLAN.md  README.md  opencode.json  pyproject.toml  tessl.json
.claude-plugin/: marketplace.json  plugin.json
.cursor-plugin/: marketplace.json  plugin.json
.github/: CODEOWNERS  ISSUE_MCP_CLI_REPUBLICATION.md
.github/workflows/: astro-airflow-mcp-ci.yml  astro-airflow-mcp-integration.yml  astro-airflow-mcp-publish.yml  astro-dwh-mcp-ci.yml  astro-dwh-mcp-publish.yml  ci.yml  plugin-version-bump.yml  prek-autoupdate.yml
.opencode/: skills
astro-airflow-mcp/: .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  prek.toml  pyproject.toml
astro-airflow-mcp/tests/: test_adapters.py  test_astro_cli.py  test_astro_pat.py  test_cli_api.py  test_cli_config_writes.py  test_cli_instances.py  test_cli_registry.py  test_config.py  test_consolidated_tools.py  test_discovery.py  test_layered.py  test_plugin.py  test_read_only.py  test_scope.py  test_server.py  test_telemetry.py  test_telemetry_middleware.py  test_tracking.py  test_utils.py
astro-dwh-mcp/: README.md  pyproject.toml
astro-dwh-mcp/src/: server.py
astro-dwh-mcp/tests/: __init__.py  test_server_shutdown.py
astro-observe-mcp/: Makefile  README.md  pyproject.toml
astro-observe-mcp/src/astro_observe_mcp/: __init__.py  __main__.py  auth.py  client.py  models.py  server.py
astro-observe-mcp/src/astro_observe_mcp/tools/: __init__.py  assets.py
astro-observe-mcp/tests/: __init__.py  conftest.py  test_auth.py  test_client.py  test_server.py
benchmarks/: CATALOG_VS_WAREHOUSE_SUMMARY.md  MODEL_BENCHMARK_README.md  PROPER_BENCHMARK_DESIGN.md  README.md  VALIDATION_README.md  VALIDATION_SUMMARY.md  benchmark.py  catalog_vs_warehouse_benchmark.py  catalog_vs_warehouse_haiku.json  catalog_vs_warehouse_opus.json  catalog_vs_warehouse_sonnet.json  claude_code_benchmark.py  claude_code_benchmark_results.json  collect_ground_truth.py  collect_ground_truth_interactive.py  fair_benchmark_results.json  find_email_columns.py  ground_truth.py  ground_truth_template.json  ground_truth_validator.py  query_observe_catalog.py  query_observe_catalog_complete.py  requirements.txt  run_claude_code_benchmark.sh  validation.py  warehouse_vs_observe_benchmark.py
claude-code-plugin/: .mcp.json
claude-code-plugin/.claude-plugin/: marketplace.json  plugin.json
docs/: init-warehouse-benchmark.md  skill-testing.md
hooks/: hooks.json
mcp-servers/: README.md  pyproject.toml
mcp-servers/src/data_plugin/: __init__.py  config.py
mcp-servers/src/data_plugin/jupyter/: __init__.py  kernel.py  prelude.py  server.py  tools.py
mcp-servers/src/data_plugin/jupyter/scripts/: session_prelude.py
opencode/: opencode.json
opencode/.opencode/: skills
scripts/: README.md  compare-flows.py  poc_auth_test.py  ralph-loop.sh  review-skill.py  run-dry-warehouse.sh  run-flow-test.sh  split-test.py  test-dry-run.py
shared-skills/airflow-migration/: SKILL.md
shared-skills/analyzing-data/: SKILL.md
shared-skills/astro-local-env/: SKILL.md
shared-skills/astro-project-setup/: SKILL.md
shared-skills/check-freshness/: SKILL.md
shared-skills/checking-freshness/: SKILL.md
shared-skills/dag-authoring/: SKILL.md
shared-skills/dag-testing/: SKILL.md
shared-skills/data-analysis/: SKILL.md
shared-skills/debug-dag/: SKILL.md
shared-skills/debugging-dags/: SKILL.md
shared-skills/diagnose/: SKILL.md
shared-skills/discover-data/: SKILL.md
shared-skills/discovering-data/: SKILL.md
shared-skills/downstream-lineage/: SKILL.md
shared-skills/explore/: SKILL.md
shared-skills/freshness/: SKILL.md
shared-skills/impacts/: SKILL.md
shared-skills/init-warehouse/: SKILL.md
shared-skills/profile/: SKILL.md
shared-skills/profile-table/: SKILL.md
shared-skills/profiling-tables/: SKILL.md
shared-skills/sources/: SKILL.md
shared-skills/testing-dags/: SKILL.md
shared-skills/upstream-lineage/: SKILL.md
skills/airflow/: SKILL.md  api-reference.md
skills/airflow-ai/: SKILL.md
skills/airflow-cli/: SKILL.md
skills/airflow-data-aware-scheduling/: SKILL.md
skills/airflow-hitl/: SKILL.md
skills/airflow-state-store/: SKILL.md
skills/analyzing-data/: SKILL.md
skills/analyzing-data-benchmark/: SKILL.md
skills/analyzing-data-observe/: SKILL.md
skills/analyzing-data-observe-benchmark/: SKILL.md
skills/analyzing-data/scripts/: cli.py  connectors.py  constraints.txt  pyproject.toml  viz_mcp.py
skills/analyzing-data/scripts/lib/: config.py  kernel.py  sql_safety.py  warehouse.py
skills/analyzing-data/scripts/lib/connectors/: __init__.py  base.py  bigquery.py  postgres.py  snowflake.py  sqlalchemy.py  utils.py
skills/analyzing-data/scripts/lib/templates/: __init__.py  helpers.py  private_key_content.py  private_key_file.py
skills/analyzing-data/scripts/tests/: test_config.py  test_connectors.py  test_sql_safety.py  test_utils.py  test_warehouse.py
skills/analyzing-data/scripts/tests/integration/: test_duckdb_e2e.py  test_postgres_e2e.py  test_sqlite_e2e.py
skills/annotating-task-lineage/: SKILL.md
skills/authoring-dags/: SKILL.md
skills/authoring-go-sdk-tasks/: SKILL.md
skills/authoring-java-sdk-tasks/: SKILL.md
skills/authoring-language-sdk-tasks/: SKILL.md
skills/blueprint/: SKILL.md
skills/checking-freshness/: SKILL.md
skills/configuring-airflow-language-sdks/: SKILL.md
skills/cosmos-dbt-core/: SKILL.md
skills/cosmos-dbt-fusion/: SKILL.md
skills/creating-openlineage-extractors/: SKILL.md
skills/dag-factory/: SKILL.md
skills/debugging-dags/: SKILL.md
skills/delegating-to-otto/: SKILL.md
skills/deploying-airflow/: SKILL.md
skills/deploying-go-sdk-bundles/: SKILL.md
tests/: README.md  evaluation-queries.txt  evaluation-queries.yaml  real-queries.txt  test_adapters.py  test_plugin.py  test_server.py
(+97 files in other folders)
