[project]
name = "astro-dwh-mcp"
dynamic = ["version"]
description = "MCP server for data warehouse operations (SQL, schema exploration)"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "jupyter-client>=8.0.0",
    "ipykernel>=6.0.0",
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "cryptography>=41.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
astro-dwh-mcp = "src.server:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0+dev"
raw-options = { root = "..", tag_regex = "^astro-dwh-mcp-(?P<version>.*)$", git_describe_command = ["git", "describe", "--tags", "--match", "astro-dwh-mcp-*"] }

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.sdist]
include = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "C4", "UP", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
